# nexus-agent

./: .coverage  .gitignore  Makefile  coverage.json  mypy.ini  nexus.spec  pyproject.toml  pytest.ini  ruff.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
configs/: default.toml  test.toml
docs/: glossary.md  mutation_test_report.md  privacy_policy.md  terms_of_service.md  v1_scope.md
docs/adr/: ADR-001-python-3.11.md  ADR-002-api-first-visual-fallback.md  ADR-003-frame-transport-ndarray.md  ADR-004-ocr-tesseract-interface.md  ADR-005-sqlite-wal.md  ADR-006-byok-openai-anthropic.md  ADR-007-single-monitor-v1.md  ADR-008-terminal-hitl-v1.md  ADR-009-credential-windows-credential-manager.md  ADR-010-capture-dedicated-subprocess.md  ADR-011-browser-dom-remote-debugging.md
installer/: nexus_agent.iss
migrations/: 001_initial.sql  002_suspended_tasks.sql  003_memory_v1.sql  004_onboarding_consent.sql
nexus/: __main__.py
nexus/action/: macroactions.py  preflight.py  registry.py
nexus/capture/: capture_worker.py  dirty_region.py  frame.py  orchestrator.py  ring_buffer.py  screen_metrics.py  session_detector.py  stabilization.py
nexus/cloud/: credentials.py  planner.py  prompt_builder.py  providers.py
nexus/core/: errors.py  hitl_manager.py  policy.py  screenshot_masker.py  sensitive_regions.py  settings.py  suspend_manager.py  task_executor.py  types.py
nexus/decision/: ambiguity_scorer.py  engine.py
nexus/infra/: cost_tracker.py  database.py  diagnostic.py  health.py  logger.py  repositories.py  telemetry.py  trace.py
nexus/memory/: __init__.py  correction_store.py  fingerprint_store.py
nexus/perception/: orchestrator.py  spatial_graph.py
nexus/release/: license_manager.py  signing.py  version.py
nexus/scripts/: diagnostic.py
nexus/source/: resolver.py
nexus/ui/: cancel_handler.py  dashboard.py  notifications.py  onboarding.py  privacy.py
nexus/verification/: __init__.py  policy.py  result.py  source_verification.py  visual_verification.py
scripts/: build_release.bat  check_coverage.py  ci.sh  health_check.py  mutation_report.md  mutation_results.json  pilot_checklist.py  run_mutation.py  sign_release.bat
tests/: conftest.py  test_budget.py  test_concurrency.py  test_coverage.py  test_dead_code.py  test_infrastructure.py  test_installation.py  test_license.py  test_memory.py  test_onboarding.py  test_properties.py  test_security.py  test_structure.py  test_telemetry.py
tests/adversarial/: adv_001_popup_interrupt.py  adv_002_element_disappear.py  adv_003_cloud_timeout.py  adv_004_cost_cap_mid_task.py  adv_005_anti_loop.py  adv_006_turkish_garbled.py  adv_007_sensitive_region.py  adv_008_uia_fail_fallback.py  adv_009_dom_fail_fallback.py  adv_010_concurrent_cancel.py  conftest.py
tests/benchmarks/: bench_capture_fps.py  bench_decision_latency.py  bench_end_to_end.py  bench_memory_soak.py  bench_ocr_accuracy.py  bench_perception_latency.py  bench_report.py  bench_transport_latency.py  conftest.py
tests/golden/: conftest.py  scenario_001_notepad_turkish.py  scenario_002_calculator.py  scenario_003_chrome_search.py  scenario_004_file_explorer.py  scenario_005_sheets_browser_writeback.py  scenario_006_pdf_spreadsheet_write.py  scenario_007_transport_native.py  scenario_008_cost_tracking.py
tests/integration/: test_block0.py  test_block1.py  test_block10.py  test_block2.py  test_block3.py  test_block4.py  test_block5.py  test_block6.py  test_block7.py  test_block8.py  test_block9.py  test_final_e2e.py
tests/property/: conftest.py  test_ambiguity.py  test_cost.py  test_geometry.py  test_ocr.py  test_transport.py
tests/unit/: test_action_registry.py  test_ambiguity_scorer.py  test_arbitrator.py  test_browser_skills.py  test_capture_worker.py  test_cost_tracker.py  test_credentials.py  test_dashboard.py  test_database.py  test_decision_engine.py  test_desktop_skills.py  test_diagnostic.py  test_dirty_region.py  test_dom_adapter.py  (+45 more)
(+53 files in other folders)
