[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-agent"
version = "0.1.0"
description = "Nexus Agent — autonomous desktop/web agent"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings",
    "structlog",
    "aiosqlite",
    "dxcam",
    "pytesseract",
    "pillow",
    "pywin32",
    "openai>=1.0",
    "anthropic>=0.20",
    "langdetect",
    "numpy",
    "opencv-python",
    "aiohttp",
    "websockets",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-timeout",
    "ruff",
    "mypy",
    "hypothesis",
    "factory-boy",
    "bandit",
    "safety",
    "vulture",
]

[tool.hatch.build.targets.wheel]
packages = ["nexus"]

[tool.mypy]
python_version = "3.11"
strict = false

[[tool.mypy.overrides]]
module = ["dxcam", "win32cred", "win32con", "pywintypes"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["comtypes", "comtypes.client"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiohttp", "websockets"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytesseract", "pdf2image", "openpyxl", "pypdf"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["nexus"]
branch = true
omit = [
    "nexus/scripts/*",
    "nexus/release/*",
    "nexus/ui/*",
    "nexus/integrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.\\s*$",
]

[tool.coverage.json]
output = "coverage.json"
pretty_print = true
